--- a/protected/modules/admin/assets/css/upload.css
+++ b/protected/modules/admin/assets/css/upload.css
@@ -1,3 +1,24 @@
 ul.breadcrumbs{
-    border:1px solid red;
+    position:relative;
+
+    padding:0;
+    margin:0;
+
+    list-style:none;
+}
+
+ul.breadcrumbs li{
+    float:left;
+
+    padding:5px;
+    font-size:26px;
+}
+
+ul.breadcrumbs:after{
+    content:'.';
+    display:block;
+    height:0;
+    clear:both;
+
+    visibility:hidden;
 }
