Data edition was added in admin

--- a/protected/modules/admin/assets/css/upload.css
+++ b/protected/modules/admin/assets/css/upload.css
@@ -33,3 +33,7 @@ table.content{
 table.content td, table.content th{
     border:1px solid black;
 }
+
+.editable-title, .editable-description{
+    cursor:pointer;
+}
