--- a/css/nav/aside.css
+++ b/css/nav/aside.css
@@ -39,5 +39,5 @@
     margin-bottom:8px;
     padding-bottom:8px;
     text-transform:uppercase;
-    text-align:left;
+    display:inline-block;
 }
