--- a/protected/modules/admin/assets/css/upload.css
+++ b/protected/modules/admin/assets/css/upload.css
@@ -34,6 +34,53 @@ table.content td, table.content th{
     border:1px solid black;
 }
 
-.editable-title, .editable-description{
+table.content td:nth-child(6), table.content td:nth-child(7){
+    text-align:center;
+}
+
+table.content td:nth-child(7) img{
+    max-height:200px;
+}
+
+.editable-title, .editable-description, .editable-cover{
     cursor:pointer;
+}
+
+.cropper img{
+    position:relative;
+    width:inherit;
+    height:inherit;
+    max-width:inherit;
+    max-height:inherit;
+}
+
+.cropper .cropper-container{
+    top:0 !important;
+    left:0 !important;
+}
+
+.cropper-form{
+    padding:10px;
+    text-align:right;
+
+    background:rgba(0, 0, 0, 0.9);
+}
+
+.cover{
+    position:relative;
+    display:inline-block;
+}
+
+.cover > .remove-cover{
+    position:absolute;
+    top:-5px;
+    right:-5px;
+
+    font-size:11px;
+    cursor:pointer;
+
+    color:white;
+    background:rgba(0,0,0, 0.5);
+
+    padding:2px 3px;
 }
