--- a/css/modal/styles.css
+++ b/css/modal/styles.css
@@ -122,7 +122,7 @@
 
 /** PREVIEW MODAL WINDOW STYLES **/
 
-#modal #preview.window > .content img{
+#modal .window > .content img{
     max-width:100%;
     max-height:100%;
 
