--- a/css-origin/nav/aside.css
+++ b/css-origin/nav/aside.css
@@ -33,7 +33,7 @@
 }
 
 #asideNavMenu .caption{
-    border-bottom:2px solid red;
+    border-bottom:2px solid #00a3fa;
     color:white;
     font-size:20px;
     margin-bottom:8px;
