--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@
 }
 
 #asideNavMenu .caption{
-    border-bottom:2px solid red;
+    border-bottom:2px solid #00a3fa;
     color:white;
     font-size:20px;
     margin-bottom:8px;
@@ -348,7 +348,7 @@
     -webkit-transform:scale(1.1); /* Opera, Chrome, and Safari */
     transform:scale(1.1);
 
-    outline:1px solid white;
+    outline:2px solid white;
 
     z-index:4;
 }
@@ -361,6 +361,22 @@ body{
     height:100%;
 
 	margin:0;
+}
+
+#logo{
+    display:block;
+
+    position:absolute;
+    top:40px;
+    left:40px;
+
+    width:150px;
+
+    z-index:2;
+}
+
+#logo > img{
+    width:inherit;
 }
 
 #substrate{
