--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,7 @@
     border-right:1px solid white;
 }
 
-.pagination ul li:last-child > a{
+.pagination ul li.last > a, .pagination ul li:last-child > a{
     border-right:none;
 }
 
