--- a/css-origin/common.css
+++ b/css-origin/common.css
@@ -31,7 +31,7 @@ body{
 	left:0;
 
 	width:100%;
-    height:100%;
+    max-height:100%;
 
 	background:-webkit-radial-gradient(50% 0, farthest-side, #7d7d7d, #3b3b3b); /* Chrome, and Safari */
 	background:-moz-radial-gradient(50% 0, farthest-side, #666666, #3b3b3b); /* FireFox */
