--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,8 @@ body{
     background:#3b3b3b;
     height:100%;
 
+    font-family:Kalinga;
+
 	margin:0;
 }
 
@@ -400,8 +402,66 @@ body{
     height:100%;
 	z-index:1;
 
-    font-family:Kalinga;
     text-align:center;
+}
+.contacts{
+    position:absolute;
+
+    top:20px;
+    right:25px;
+
+    color:white;
+
+    z-index:2;
+}
+
+.contacts__caption{
+    text-align:right;
+}
+
+.contacts-caption{
+    border:none;
+    background:transparent;
+
+    color:white;
+    font-size:10px;
+
+    cursor:pointer;
+    padding:5px 8px;
+
+    outline:none;
+
+    text-transform:uppercase;
+}
+
+.contacts-caption i{
+    font-size:13px;
+
+    margin-left:5px;
+}
+
+.contacts-list{
+    background:#585858;
+
+    margin:0;
+    padding:0 5px;
+}
+
+.contacts-list.hidden{
+    display:none;
+}
+
+.contacts-list__contact{
+    cursor:pointer;
+    list-style:none;
+
+    padding:8px 0;
+
+    font-size:10px;
+}
+
+.contacts-list__contact:nth-child(2n+1){
+    border-bottom:2px solid #424242;
 }
 .float-left{
     float:left;
