--- a/css-origin/modal/styles.css
+++ b/css-origin/modal/styles.css
@@ -86,7 +86,7 @@
 
 #modal .window > .source, #modal .window > .close{
     position:absolute;
-    top:5px;
+    bottom:5px;
 
     padding:5px;
 
@@ -100,11 +100,11 @@
 }
 
 #modal .window > .close{
-    right:5px;
+    left:calc(50% + 3px);
 }
 
 #modal .window > .source{
-    right:43px;
+    left:calc(50% - 33px);
 }
 
 #modal .window > .source .fa, #modal .window > .close .fa{
