--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,8 @@
 #modal > .overlay{
     background:rgba(0,0,0,0.7);
 
+    cursor:pointer;
+
     z-index:1001;
 }
 
@@ -125,13 +127,11 @@
     width:500px;
 }
 
-#modal .window > .controls{
+#modal .window .controls{
     position:absolute;
 
     top:0;
     height:100%;
-
-    width:50%;
 
     transition:all 0.2s ease 0s;
     -webkit-transition:all 0.2s ease 0s; /* Chrome, Safari, Opera */
@@ -142,16 +142,14 @@
 
     cursor:pointer;
 
-    opacity:0.15;
-
     z-index:1003;
 }
 
-#modal .window > .controls[disabled]{
+#modal .window .controls.prev[disabled]{
     opacity:0.15 !important;
 }
 
-#modal .window > .controls .fa{
+#modal .window .controls .fa{
     position:absolute;
 
     top:50%;
@@ -164,24 +162,24 @@
     display:block;
 }
 
-#modal .window > .controls.prev{
+#modal .window .controls.prev{
     left:0;
+
+    opacity:0.15;
 }
 
-#modal .window > .controls.prev > .fa{
+#modal .window .controls.prev > .fa{
     left:13px;
 }
 
-#modal .window > .controls.next{
-    right:0;
-}
-
-#modal .window > .controls.next > .fa{
-    right:13px;
-}
-
-#modal .window > .controls:hover{
+#modal .window .controls.prev:hover{
     opacity:1;
+}
+
+#modal .window .controls.next{
+    left:0;
+
+    width:100%;
 }
 
 #modal .window > .source, #modal .window > .close{
@@ -217,6 +215,10 @@
 }
 
 #modal .window > .source:hover, #modal .window > .close:hover{
+    opacity:1;
+}
+
+#modal > .overlay:hover + .center .window > .close{
     opacity:1;
 }
 
